--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
         <!-- Right side image -->
         <div class="hero-image">
-            <img src="MyImage.png" alt="Profile Image">
+            <img src="Myimage.png" alt="Profile Image">
         </div>
     </div>
 </section>
 
 </body>
 </html>
+
