--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 
         <!-- Right side image -->
         <div class="hero-image">
-            <img src="Myimage.png" alt="Profile Image">
+            <img src="https://github.com/aneesh-jaiswar/portfolio/blob/main/MyImage.png?raw=true" alt="Profile Image">
         </div>
     </div>
 </section>
 
 </body>
 </html>
+
 
