--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Right side image -->
         <div class="hero-image">
-            <img src="Myimage.png">
+            <img src="MyImage.png" alt="Profile Image">
         </div>
     </div>
 </section>
