--- a/projects.html
+++ b/projects.html
@@ -29,23 +29,28 @@ body {
 .project h3 {
     color: #38bdf8;
 }
-
+h1{
+    color:red;
+    text-align: center;
+    margin-top: 200px;
+}
+.anchor{
+    color: grey;
+    text-align: center;
+    margin-top: 50px;
+    
+}
+a:hover{
+    color: red;
+}
 </style>
 </head>
 <body>
 
-<h1>My Projects</h1>
 
-<div class="project">
-    <h3>Portfolio Website</h3>
-    <p>Personal responsive portfolio using HTML & CSS.</p>
-</div>
-
-<div class="project">
-    <h3>Login System</h3>
-    <p>Login & Register pages with form validation.</p>
-</div>
-
+<h1>Under Mantainance</h1>
+<div class="anchor">
 <a href="index.html">⬅ Back to Home</a>
+</div>
 </body>
 </html>
