--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aneesh | Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head> 
 <body>
     
@@ -19,10 +22,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
-            <div class="nav-actions">
-                <a href="login.html" class="login">Login</a>
-                <a href="register.html" class="btn">Register</a>
-            </div>
+            
         </nav>
     </header>
 
@@ -49,6 +49,17 @@
         </div>
     </div>
 </section>
+<footer class="footer">
+        <p>© 2025  Designed & Developed by Aneesh jaiswar</p>
+
+
+        <div class="social-icons">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/aneeshhh_02?igsh=MXZ4cmZ6aTZwaDN5YQ==" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://shorturl.at/iUnna" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/aneesh-jaiswar/" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+    </footer>
 
 </body>
 </html>
