--- a/projects.html
+++ b/projects.html
@@ -2,37 +2,137 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Projects | Aneesh</title>
-<style>
+    <title>Project | Aneesh</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background: #000000;
-    color: #fff;
+    margin: 0;
+    background-color: #000000;
 }
 
-h1{
-    color:red;
+header {
+    background-color: #222;
+    color: white;
     text-align: center;
-    margin-top: 200px;
+    padding: 20px;
 }
-.anchor{
+
+#projects {
+    padding: 20px;
+}
+
+h2 {
     text-align: center;
-    margin-top: 50px;
+    margin-bottom: 20px;
+    color: rgb(255, 0, 0);
+    text-decoration: underline;
 }
+
+.project-card {
+    background-color: rgb(90, 90, 90);
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 12px;
+    box-shadow: 0 0 6px rgba(0,0,0,0.2);
+    color: white;
+}
+
+.project-card:hover{
+    color: white;
+    
+}
+
 a{
-    color: gray;
+    color: grey;
     font-size: large;
+    margin-top: 20px;
 }
+
 a:hover{
     color: red;
 }
+
+footer {
+    background-color: #222;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+footer a{
+    margin: 0 5px;
+    color: white;
+}
+footer i{
+   
+    color:whitesmoke;
+}
+
+
 </style>
 </head>
 <body>
 
-<h1>Under Mantainance</h1>
-<div class="anchor">
+<header>
+    <h1>Aneesh Jaiswar</h1>
+    <p>Web Developer | Fresher</p>
+</header>
+
+<section id="projects">
+    <h2>Projects</h2>
+
+    <div class="project-card">
+        <h3>Personal Portfolio Website</h3>
+        <p>
+            Designed a responsive personal portfolio website to showcase skills,
+            projects, and contact information.
+        </p>
+        <p><b>Technologies:</b> HTML, CSS</p>
+    </div>
+
+    <div class="project-card">
+        <h3>Online Quiz Application</h3>
+        <p>
+            Developed a quiz application with multiple-choice questions and score
+            calculation.
+        </p>
+        <p><b>Technologies:</b> HTML, CSS, JavaScript</p>
+    </div>
+
+    <div class="project-card">
+        <h3>Student Management System</h3>
+        <p>
+            Created a system to add, update, delete, and view student records.
+        </p>
+        <p><b>Technologies:</b> Java, MySQL</p>
+    </div>
+
+    <div class="project-card">
+        <h3>Weather Information App</h3>
+        <p>
+            Built a weather app that fetches real-time weather data using an API.
+        </p>
+        <p><b>Technologies:</b> HTML, CSS, JavaScript, API</p>
+    </div>
+
+    <div class="project-card">
+        <h3>Library Management System</h3>
+        <p>
+            Developed a console-based application to manage books and members.
+        </p>
+        <p><b>Technologies:</b> Python</p>
+    </div>
+
+</section>
 <a href="index.html">⬅ Back to Home</a>
-</div>
+
+<footer>
+    <p>© 2025 Aneesh Jaiswar</p>
+    <a href="mailto:aneeshjaiswar2@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+    <a href="tel:+918591601847"><i class="fa-solid fa-phone"></i></a>
+</footer>
+
 </body>
 </html>
