--- a/about.html
+++ b/about.html
@@ -36,6 +36,19 @@ a:hover{
     color: red;
 }
 
+@media (max-width:600px){
+h1{
+font-size:1.6rem;
+}
+
+p{
+font-size:0.95rem;
+}
+
+.page{
+padding:1.5rem;
+}
+}
 </style>
 
 </head>
