--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,15 @@ a:hover{
     color: red;
 }
 
+@media (max-width:600px){
+h1{
+font-size:1.6rem;
+}
+
+.contact-container{
+padding:2rem 1rem;
+}
+}
 </style>
 </head>
 <body>
