--- a/projects.html
+++ b/projects.html
@@ -66,9 +66,31 @@ footer a{
     color: white;
 }
 footer i{
-   
     color:whitesmoke;
 }
+
+@media (max-width: 900px){
+.projects-grid{
+grid-template-columns:repeat(2, 1fr);
+}
+}
+
+@media (max-width: 600px){
+header h1{
+font-size:1.8rem;
+}
+
+
+#projects h2{
+font-size:1.6rem;
+}
+
+
+.projects-grid{
+grid-template-columns:1fr;
+}
+}
+
 
 
 </style>
