--- a/resume.html
+++ b/resume.html
@@ -31,6 +31,17 @@ a:hover{
     color: white;
 }
 
+@media (max-width:600px){
+h1{
+font-size:2rem;
+margin-bottom:2rem;
+}
+
+p{
+font-size:1rem;
+}
+}
+
 </style>
 </head>
 <body>
