--- a/services.html
+++ b/services.html
@@ -25,6 +25,17 @@ a{
 a:hover{
     color: red;
 }
+
+@media (max-width:600px){
+h1{
+font-size:1.6rem;
+}
+
+.skills li{
+font-size:0.95rem;
+padding:0.4rem 0.8rem;
+}
+}
 </style>
 </head>
 <body>
