--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ h1{
 font-size:1.6rem;
 }
 
-.contact-container{
+form{
 padding:2rem 1rem;
 }
 }
@@ -67,3 +67,4 @@ padding:2rem 1rem;
 <a href="index.html">⬅ Back to Home</a>
 </body>
 </html>
+
