--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@ font-size:1.6rem;
 }
 
 form{
+align-items:center;    
 padding:2rem 1rem;
 }
 }
@@ -67,4 +68,5 @@ padding:2rem 1rem;
 <a href="index.html">⬅ Back to Home</a>
 </body>
 </html>
+
 
