--- a/about.html
+++ b/about.html
@@ -13,12 +13,14 @@
     padding: 40px;
     }
 
-.page {
+p {
     max-width: 800px;
     margin: auto;
     background: #0f172a;
     padding: 30px;
     border-radius: 10px;
+    margin-bottom: 20px;
+    font-size: 18px;
     }
 
 h1 {
@@ -45,7 +47,7 @@ p{
 font-size:0.95rem;
 }
 
-.page{
+p{
 padding:1.5rem;
 }
 }
@@ -61,9 +63,13 @@ padding:1.5rem;
 </p>
 
 <P>
-    I'm persuning second year of Computer science degree and having huge interest in real world project.
-    Recently I worked on a full stack project. 
+   I am a computer science student with a good foundation in programming, databases, and computer networks.
+   I enjoy building projects that solve real-world problems and continuously improving my technical skills. 
+   I am looking for opportunities to learn, grow, and start my career in the tech industry. 
 </P>
+
+<p>I believe in continuous learning and self-improvement, and I enjoy turning ideas into functional projects.
+   I’m excited to begin my journey as a professional in the tech world.</p>
 <br>
 
 <a href="index.html">⬅ Back to Home</a>
