--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,14 @@ form {
     gap: 15px;
 }
 
+h1{
+    color: red;
+    text-align: center;
+    margin-top: 30px;
+    text-decoration: underline;
+    margin-bottom: 150px;
+}
+
 input, textarea {
     padding: 10px;
     border-radius: 6px;
@@ -33,6 +41,7 @@ button {
 }
 button:hover{
     color: white;
+    background-color: gray;
 }
 a{
     color: grey;
@@ -47,7 +56,7 @@ h1{
 font-size:1.6rem;
 }
 
-form{  
+form{
 padding:2rem 1rem;
 }
 }
@@ -67,5 +76,3 @@ padding:2rem 1rem;
 <a href="index.html">⬅ Back to Home</a>
 </body>
 </html>
-
-
