--- a/projects.html
+++ b/projects.html
@@ -27,10 +27,11 @@ h2 {
     margin-bottom: 20px;
     color: rgb(255, 0, 0);
     text-decoration: underline;
+    margin-bottom: 40px;
 }
 
 .project-card {
-    background-color: rgb(90, 90, 90);
+    background-color: #0f172a;
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 12px;
@@ -38,10 +39,6 @@ h2 {
     color: white;
 }
 
-.project-card:hover{
-    color: white;
-    
-}
 
 a{
     color: grey;
@@ -61,12 +58,21 @@ footer {
     margin-top: 20px;
 }
 
+footer p{
+    font-size: 18px;
+}
+
 footer a{
-    margin: 0 5px;
+    margin: 0 8px;
     color: white;
 }
+
 footer i{
     color:whitesmoke;
+}
+
+footer i:hover{
+    color:#00aced;
 }
 
 @media (max-width: 900px){
