--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,9 @@ h1{
     margin-top: none;
 }
 
+p{
+    font-size: 18px;
+}
 a {
     display: inline-block;
     padding: 12px 25px;
@@ -29,6 +32,7 @@ a {
 }
 a:hover{
     color: white;
+    background-color: gray;
 }
 
 @media (max-width:600px){
