--- a/services.html
+++ b/services.html
@@ -15,12 +15,18 @@ body {
     padding-bottom: 10px;
 
 }
+.skills li{
+    margin-bottom: 5px;
+    padding: 5px;
+}
 h1{
     color: #ff0000;
     text-decoration: underline;
+    text-align: center;
 }
 a{
     color: grey;
+    font-size: large;
 }
 a:hover{
     color: red;
