--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,17 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+.container{
+    max-width: 500px;
+    padding: 30px;
+    border: 1px solid #333;
+    border-radius: 12px;
+    background: #000;
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.15);
+    align-items: center;
+    margin: auto;
+    }
+
 form {
     max-width: 400px;
     margin: 60px auto;
@@ -23,7 +34,7 @@ h1{
     text-align: center;
     margin-top: 30px;
     text-decoration: underline;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
 }
 
 input, textarea {
@@ -44,12 +55,18 @@ button:hover{
     background-color: gray;
 }
 a{
+    display: inline-block;
+    text-decoration: none;
     color: grey;
     font-size: large;
-}
+    transition: color 0.3s ease, transform 0.3s ease;
+    margin-top: 50px;
+    }
+
 a:hover{
     color: red;
-}
+    transform: translateX(-5px);
+    }
 
 @media (max-width:600px){
 h1{
@@ -64,8 +81,9 @@ padding:2rem 1rem;
 </head>
 <body>
 
-<h1><u>Contact Me</u></h1>
+<h1>Contact Me</h1>
 
+<div class="container">
 <form>
     <input type="text" placeholder="Your Name" required>
     <input type="email" placeholder="Your Email" required>
@@ -74,5 +92,6 @@ padding:2rem 1rem;
 </form>
 
 <a href="index.html">⬅ Back to Home</a>
+</div>
 </body>
 </html>
