--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 You can find my work on GitHub.
             </p>
             <div class="hero-buttons">
-                <a href="resume.html" class="btn">Hire Me</a>
+                <a href="resume.html" class="btn">More Info...</a>
                 <a href="projects.html" class="btn-outline">View Projects</a>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="social-icons">
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/aneeshhh_02?igsh=MXZ4cmZ6aTZwaDN5YQ==" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://shorturl.at/iUnna" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/aneesh-jaiswar-409b11399?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/aneesh-jaiswar/" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </footer>
