--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,18 @@ body {
     text-align: center;
     padding: 60px;
 }
+
+.container{
+    max-width: 500px;
+    padding: 30px;
+    border: 1px solid #333;
+    border-radius: 12px;
+    background: #000;
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.15);
+    align-items: center;
+    margin: auto;
+    }
+
 h1{
     color: red;
     text-decoration: underline;
@@ -22,18 +34,40 @@ h1{
 p{
     font-size: 18px;
 }
-a {
+
+.btn{
     display: inline-block;
-    padding: 12px 25px;
+    padding: 8px 16px;
     background: red;
     color: #000;
-    border-radius: 25px;
+    border-radius: 15px;
     text-decoration: none;
 }
-a:hover{
+
+.btn:hover{
     color: white;
     background-color: gray;
 }
+
+.button{
+    display: flex;
+    gap: 15px;
+    margin-left: 80px;
+}
+
+.btn-outline{
+    padding: 8px 16px;
+    border: 1px solid red;
+    color: red;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
+.btn-outline:hover{
+    background-color: gray;
+    color: white;
+}
+
 
 @media (max-width:600px){
 h1{
@@ -51,10 +85,15 @@ font-size:1rem;
 <body>
 
 <h1>My Resume</h1>
+<div class="container">
 <p>Download my resume below :</p><br>
 
-<a href="Myresume.pdf" class="btn">Download Resume</a>
+<div class="button">
 
-<a href="index.html">⬅ Back to Home</a>
+<a href="Myresume.pdf" class="btn">Download Resume</a>
+<a href="index.html" class="btn-outline">⬅ Back to Home</a>
+
+</div>
+</div>
 </body>
 </html>
